# linenoise

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .includes.imp  LICENSE  README.md  linenoise.c  meson.build  meson_options.txt
.reuse/: dep5
doc/: Doxyfile.in  meson.build
examples/: .clang-tidy  example.c  meson.build
include/comlin/: comlin.h
include/linenoise/: linenoise.h
src/: .clang-tidy  comlin.c  linenoise.c
test/: .clang-tidy  meson.build  run_test.py  test_comlin.c  test_history.c
test/common/: Backspace.in.ans  CaCa.in.ans  CaCa.out.ans  CaCt.in.ans  CaCu.in.ans  Cb.in.ans  CbCbCt.out.ans  CbCf.out.ans  CbCu.in.ans  CbCw.in.ans  CbCw.out.ans  CbDelete.in.ans  Cc.in.ans  Ce.in.ans  Cf.in.ans  Ch.in.ans  Ch.out.ans  Ck.in.ans  Cl.in.ans  Cl.out.ans  Cn.in.ans  Cn.out.ans  Co.in.ans  CpCp.in.ans  CpCpCn.out.ans  CpCpCnCn.in.ans  CpCpCp.in.ans  CpCpCuCp.in.ans  CpCpCuCp.out.ans  Cq.in.ans  Cr.in.ans  Cr.out.ans  Cs.in.ans  Ct.in.ans  Cv.in.ans  CwCw.out.ans  Cx.in.ans  Cz.in.ans  Home2.in.ans  Home2End2.out.ans  (+21 more)
test/dumb/: meson.build
test/history/: Up.out.ans  four.out.ans  many.hist.txt  many.in.ans  many.out.ans  meson.build  three.out.ans
test/mask/: CpCp.in.ans  CpCp.out.ans  meson.build  one.out.ans  two.out.ans
test/multi/: LeftLeftLeftLeft.in.ans  LeftLeftLeftLeft.out.ans  long.out.ans  meson.build  middle.in.ans  middle.out.ans
test/single/: Ca.in.ans  CaCe.in.ans  CbCbCt.in.ans  CbCd.in.ans  CbCf.in.ans  CbCt.in.ans  CbCt.out.ans  CbCu.out.ans  Ck.out.ans  CpCpCn.in.ans  CpCpCnCn.out.ans  CpCpCp.out.ans  Cu.in.ans  Cw.in.ans  Cw.out.ans  CwCw.in.ans  Home.in.ans  Home2End2.in.ans  HomeEnd.in.ans  Left.in.ans  LeftLeftLeftLeft.in.ans  LeftLeftLeftLeft.out.ans  UpUp.in.ans  fiTab.out.ans  fiTabTab.in.ans  fiTabTab.out.ans  fiTabTabTab.in.ans  fiTabTabTab.out.ans  fiTabiTab.in.ans  fiTabiTab.out.ans  long.in.ans  long.out.ans  meson.build  middle.out.ans  seTab.out.ans  seTabTab.in.ans  seTabTab.out.ans
