# Copyright 2020-2024 David Robillard <d@drobilla.net>
# SPDX-License-Identifier: BSD-2-Clause

option('docs', type: 'feature', value: 'auto', yield: true,
       description: 'Build API reference documentation')

option('lint', type: 'boolean', value: false, yield: true,
       description: 'Run code quality checks')
