# Copyright 2020-2023 David Robillard <d@drobilla.net>
# SPDX-License-Identifier: BSD-2-Clause

common_test_names = [
  'Backspace',
  'Ca',
  'CaCa',
  'CaCe',
  'CaCt',
  'Cb',
  'CbCbCt',
  'CbCd',
  'CbCf',
  'CbCk',
  'CbCt',
  'CbCu',
  'CbCw',
  'CbDelete',
  'Cc',
  'Cd',
  'Ce',
  'Cf',
  'Cg',
  'Ch',
  'Ck',
  'Cl',
  'Cn',
  'Co',
  'CpCp',
  'CpCpCn',
  'CpCpCnCn',
  'CpCpCp',
  'CpCpCuCp',
  'Cq',
  'Cr',
  'Cs',
  'Ct',
  'Cu',
  'Cv',
  'Cw',
  'CwCw',
  'Cx',
  'Cy',
  'Home',
  'Home2',
  'Home2End2',
  'HomeEnd',
  'Left',
  'LeftBackspace',
  'LeftCp',
  'LeftRight',
  'SpcSpcCw',
  'Tab',
  'UpUp',
  'UpUpDown',
  'fiTab',
  'fiTabEsc',
  'fiTabTab',
  'fiTabTabEsc',
  'fiTabTabTab',
  'fiTabTabTabEsc',
  'fiTabTabTabfth',
  'fiTabiTab',
  'one',
  'seTab',
  'seTabTab',
  'two',
]

foreach name : common_test_names
  in_file = files(name + '.in.ans')
  out_file = files(name + '.out.ans')

  test(
    name + '_single',
    run_test_py,
    args: [out_file, test_comlin, in_file],
    suite: ['io', 'common'],
  )

  test(
    name + '_multi',
    run_test_py,
    args: [out_file, '--', test_comlin, '--multi', in_file],
    suite: ['io', 'common'],
  )
endforeach
